[package]
name = "ros-hydra-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "process", "io-util"]}
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
indicatif = "0.18.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
indent = "0.1.1"
regex = "1.11.3"
clap = { version = "4.5.48", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
