[package]
name = "ros-hydra-stats"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "process", "io-util"]}
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
indicatif = "0.18.4"
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
indent = "0.1.1"
regex = "1.12.3"
clap = { version = "4.6.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
log = "0.4"
env_logger = "0.11"
itertools = "0.14.0"
dirs = "6.0.0"

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.0" }
